# ImageFilter

./: CMakeLists.txt  CMakePresets.json  README.md  paths.txt
ImageFilter/: CMakeLists.txt  CameraHandler.cpp  ComputeShader.cpp  FragmentShader.cpp  GUI.cpp  ImageManager.cpp  InputManager.cpp  Main.cpp  Renderer.cpp  ShaderBase.cpp  ShaderManager.cpp  ShaderProgram.cpp  Window.cpp
ImageFilter/glad/include/glad/: gl.h
ImageFilter/include/: CameraHandler.h  ComputeShader.h  FragmentShader.h  GUI.h  ImageManager.h  InputManager.h  Renderer.h  ShaderBase.h  ShaderManager.h  ShaderProgram.h  Window.h
ImageFilter/stb/: stb_image_write.cpp
shaders/: blackandwhite.compute  colors.compute  dither.compute  edgedetection.compute  noise.compute  pixelate.compute  pixels.compute  test.compute
